kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: football-manager
  labels:
    name: football-manager
    app: football-manager
